<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:background="@mipmap/maintry"
    android:focusableInTouchMode="true"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/gradientbackground"
                android:gravity="center"
                android:text="@string/AskAQUestion"
                android:textColor="@color/textcolor"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>




            <EditText
                android:id="@+id/QuestiondescriptionUser"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                android:maxLines="8"
                android:background="@drawable/textborder"
                android:gravity="top"
                android:textColor="@color/textcolor"
                android:hint="@string/writeQuestion"
                android:inputType="text|textMultiLine"
                android:padding="10dp"
                android:textColorHint="@color/hintcolor" />

            <TextView
                android:background="@color/Skype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/textcolor"
                android:gravity="center"
                android:text="@string/recordQuestion"
                android:padding="10dp"/>

            <RelativeLayout
                android:id="@+id/seekbarControl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnAnnoncementcancel"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <Chronometer
                    android:id="@+id/textTimeLast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/textcolor"
                    android:textSize="28sp"
                    android:text="00:00" />
            </RelativeLayout>



            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="35dp"
                android:paddingLeft="35dp"
                android:paddingEnd="35dp">

                <ImageView
                    android:id="@+id/QRecording"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginRight="30dp"
                    android:src="@mipmap/recording" />



                <ImageView
                    android:id="@+id/QPlay"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/play" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="7dp">

                <Button
                    android:id="@+id/btnQcacel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:minHeight="55dp"
                    android:background="@drawable/textborder"
                    android:text="@string/cancel"
                    android:textColor="@color/botomcolor" />

                <Button
                    android:id="@+id/btnQsend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="55dp"
                    android:background="@drawable/btn_close_design"
                    android:text="@string/send"
                    android:textColor="@color/textcolor" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
