<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@mipmap/maintry">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/testAd">
        <LinearLayout
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/addbanner"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="30dp"
                android:scaleType="fitXY"/>

            <Button
                android:layout_marginTop="70dp"
                android:id="@+id/btnVisitor"
                android:minWidth="260dp"
                android:minHeight="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/whitebutton"
                android:textColor="@color/textcolor"
                android:text="Visiter"
                android:textAllCaps="false"
                android:padding="10dp"
                android:layout_gravity="center"
                />

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btnRegisterMasjiid"
                android:minWidth="260dp"
                android:minHeight="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/whitebutton"
                android:textColor="@color/textcolor"
                android:text="@string/regAsMassjid"
                android:textAllCaps="false"
                android:padding="10dp"
                android:layout_gravity="center"
                />

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btnRegisterUser"
                android:minWidth="260dp"
                android:minHeight="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/whitebutton"
                android:textColor="@color/textcolor"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/regAsUser"
                android:textAllCaps="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/alreadyhaveAccount"
                android:text="@string/alreadyaccount"
                android:textColor="@color/textcolor"
                />

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btnLogin"
                android:minWidth="150dp"
                android:minHeight="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/whitebutton"
                android:textColor="@color/textcolor"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/testAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_alignParentBottom="true"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
